# marinoland_web

./: .gitignore  .gitmodules  CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  HttpsClient.cpp  HttpsClient.hpp  README.md  RestClient.cpp  RestClient.hpp  RestWebResponse.cpp  RestWebResponse.hpp  WebClient.cpp  WebClient.hpp  WebResponse.cpp  WebResponse.hpp  configure.bat  depend.list  sample.cpp  test.cpp  testweb.cpp
include/: ErrorCodes.hpp  HttpsClient.hpp  RestClient.hpp  WebResponse.hpp
include/web/: Authorization.hpp  ErrorCodes.hpp  HttpClient.hpp  HttpsClient.hpp  RestClient.hpp  RestWebResponse.hpp  URLEncode.hpp  WebClient.hpp  WebResponse.hpp
src/: Authorization.cpp  HttpClient.cpp  HttpsClient.cpp  RestClient.cpp  RestWebResponse.cpp  WebClient.cpp  WebResponse.cpp
test/: testweb.cpp
